# PRACTICA-4-POO-2022

./: README.md
marketplace/src/: CMakeLists.txt
marketplace/src/basket/: basket.cc  basket.h  basket_main.cc
marketplace/src/client/: CMakeLists.txt  client.cc  client.h
marketplace/src/computer/: computer.cc  computer.h
marketplace/src/market/: market.h
marketplace/src/person/: person.h
marketplace/src/product/: product.h  product_main.cc
marketplace/src/seller/: CMakeLists.txt  seller.cc  seller.h
marketplace/src/tv/: CMakeLists.txt  tv.cc  tv.h
marketplace/tests/: CMakeLists.txt  basket_test2.cc
poo/market/marketplace/src/app/: CMakeLists.txt  app_main.cc
poo/market/marketplace/src/basket/: CMakeLists.txt  basket.cc  basket.h  basket_main.cc
poo/market/marketplace/src/client/: CMakeLists.txt  basket.h  client.cc  client.h  client_main.cc
poo/market/marketplace/src/computer/: CMakeLists.txt  computer.cc  computer.h  computer_main.cc
poo/market/marketplace/src/market/: CMakeLists.txt  market.cc  market.h  market_main.cc
poo/market/marketplace/src/seller/: CMakeLists.txt  seller.cc  seller.h  seller_main.cc
poo/market/marketplace/tests/: CMakeLists.txt
poo/p0/: a.out  guess.cc  hello-wordl.cc  ns.cc
poo/p2/: a.out  person.cc  person.h  person_main.cc
poo/p3/marketplace/src/: CMakeLists.txt
poo/p3/marketplace/src/tv/: tv.cc  (+2 more)
poo/p3/marketplace/tests/: CMakeLists.txt  product_test.cc
poo/p7/: Makefile  a.out  contador.cc  contador.h  contador_main.cc  contador_unittest  ordena.cc  ordena2.cc  ordena3.cc  plantilla.cc  plantilla2.cc
(+19 files in other folders)
